--- a/package.json
+++ b/package.json
@@ -4,33 +4,36 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
-  },
+  "dev:frontend": "vite",
+  "dev:backend": "node server.js",
+  "dev": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\"",
+  "build": "vite build",
+  "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+  "preview": "vite preview"
+},
   "dependencies": {
-    "framer-motion": "^12.26.1",
-    "jspdf": "^4.0.0",
-    "jspdf-autotable": "^5.0.7",
-    "lucide-react": "^0.562.0",
-    "react": "^18.2.0",
-    "react-calendly": "^4.4.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.6.1",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
+    "framer-motion": "^12.26.1",
     "helmet": "^7.1.0",
-    "razorpay": "^2.9.2"
+    "jspdf": "^4.0.0",
+    "jspdf-autotable": "^5.0.7",
+    "lucide-react": "^0.562.0",
+    "razorpay": "^2.9.2",
+    "react": "^18.2.0",
+    "react-calendly": "^4.4.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.20.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.16",
+    "concurrently": "^9.2.1",
     "eslint": "^8.55.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
